--- a/01 - Daily/20251018.md
+++ b/01 - Daily/20251018.md
@@ -20,7 +20,7 @@ cssclasses:
 
 ### Tasks
 > [!example] Realizar notas #📊EST
-> - [ ] Completar anotaciones.
+> - [ ] Completar anotaciones!
 
 > [!example] Realizar notas #🎨IHC
 > - [ ] Completar anotaciones.
