--- a/01 - Daily/20251021.md
+++ b/01 - Daily/20251021.md
@@ -14,8 +14,6 @@ cssclasses:
 
 ### Notes
 
-> [!tip] No notes found
-> - Nothing to see here yet
 
 ***
 
@@ -23,7 +21,7 @@ cssclasses:
 
 > [!bug] Tercer Quiz #📊EST 
 > - [?] Realizar Quiz 3 sobre el tema de Probabilidades: [[📊EST 🏫MPR 02 Probabilidad.pdf|Unidad 2: Probabilidad]]
-> - [ ] Lección [[📊EST 📝NOT 01 Estadística Descriptiva|Unidad 1: Estadística Descriptiva]]
+> - [x] Lección [[📊EST 📝NOT 01 Estadística Descriptiva|Unidad 1: Estadística Descriptiva]]
 > - [ ] Completar anotaciones.
 
 > [!bug] Realizar impresión #🗃️SBD 
