--- a/01 - Daily/20251023.md
+++ b/01 - Daily/20251023.md
@@ -29,4 +29,4 @@ cssclasses:
 > - [ ] Completar anotaciones.
 
 > [!bug] Lenguaje Unificado de Modelado #📦DSW 
-> - [ ] Control de Lectura 4: [[📦DSW 📚LIB 02 Using UML Software Engineering with Objects and Components.pdf#page=139|Diagramas de Secuencias (Capítulo 9.3 y 9.4)]] y [[📦DSW 📚LIB 01 Software Engineering.pdf#page=644|Software Engineering - Apéndice 1: Lo referente a Diagramas de Secuencias]]. Adicionalmente, leer [[📦DSW 🏫MPR 02 UML Casos de Uso.pdf]] Y [[📦DSW 🏫MPR 02 UML Clases y Secuencia.pdf]]
+> - [?] Control de Lectura 4: [[📦DSW 📚LIB 02 Using UML Software Engineering with Objects and Components.pdf#page=139|Diagramas de Secuencias (Capítulo 9.3 y 9.4)]] y [[📦DSW 📚LIB 01 Software Engineering.pdf#page=644|Software Engineering - Apéndice 1: Lo referente a Diagramas de Secuencias]]. Adicionalmente, leer [[📦DSW 🏫MPR 02 UML Casos de Uso.pdf]] Y [[📦DSW 🏫MPR 02 UML Clases y Secuencia.pdf]]
