--- a/01 - Daily/20251027.md
+++ b/01 - Daily/20251027.md
@@ -32,6 +32,7 @@ cssclasses:
 > [!bug] Realizar notas #🎨IHC
 > - [ ] Realizar Nota #3.
 > - [ ] Realizar Entrevistas.
+> - [ ] Subir [Evidencias](https://aulavirtual.espol.edu.ec/groups/166252/files).
 
 > [!bug] Realizar notas #💾EDD
 > - [ ] Realizar Apuntes de Documentos.
